# vdhinfra

./: .gitignore  .gitleaks.toml  .justfile  .mise.toml  .renovaterc.json5  .sops.yaml  .yamllint.yaml  CLAUDE.md  LICENSE
.claude/agents/: change-qa.md  comms-engineer.md  design-engineer.md  frontend-engineer.md  ha-engineer.md  it-researcher.md  k8s-engineer.md  observability-engineer.md  pentest-engineer.md  security-engineer.md  udm-engineer.md
.claude/commands/: hacontrol.md  udmcontrol.md
.github/workflows/: build-cluster-health-image.yml
configs/airmax/: vdhptp01.cfg.sops  vdhptp02.cfg.sops
docs/adr/: 0001-flux-cluster-admin.md  0002-cmdb-vs-live-data.md  0003-no-critical-infra-on-smart-plugs.md
docs/ai-context/: ARCHITECTURE.md  CONVENTIONS.md  DOMAIN.md  Ethos.md  NETWORKING.md  README.md  TOOLS.md  WORKFLOWS.md
docs/design/: fp2-watchdog.md  ipv6-ula-nat66-2026-07.md  ops-portal-v2.md  presentation-build.md  topology-cmdb-extension.md  topology-render-v1.md
docs/health-reports/: 2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  (+89 more)
hack/kiosk-verify/: README.md  pyproject.toml
hack/kiosk-verify/kiosk_verify/: __main__.py
hack/kiosk-verify/tests/: smoke.sh
ops/: README.md  accepted_risks.yaml  changes.jsonl  cmdb.yaml  freeze.yaml  incidents.jsonl  ops  roster.md
web/: Makefile
(+418 files in other folders)
