[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiosk-verify"
version = "0.1.0"
description = "Verify kiosk UI URLs render correctly (dark mode, CSS vars, screenshot)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "pyyaml>=6.0",
]

[project.scripts]
kiosk-verify = "kiosk_verify.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["kiosk_verify"]

[dependency-groups]
dev = []
